syntax = "proto3";
package pb;
option go_package = "github.com/dasotd/go_grpc/pb";
import "account.proto";


message GetAccountRequest {
    string id =1;
}

message GetAccountResponse {
    Account account = 1;
}

message GetAllUserResponse {
    repeated GetAccountResponse account = 1;
}

